--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=nghiacoder28_Website_GamePad
 sonar.organization=nghiacoder28
-sonar.java.binaries=build
+sonar.java.binaries=build/classes
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Website_GamePad
 #sonar.projectVersion=1.0
